--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "@google/generative-ai": "^0.2.1",
     "serverless-http": "^3.2.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
